Task salvando no db com sucesso

--- a/views/task-form.ejs
+++ b/views/task-form.ejs
@@ -13,7 +13,8 @@
     <h2>To-Do List</h2>
     <div class="todo">
       <form action="/" method="POST" class="todo-header">
-        <input type="text" name="content">
+        <input type="text" name="title" id="title"><label for="title">Título</label>
+        <input type="text" name="details" id="details"><label for="details">Conteúdo</label>
         <button type="submit"><span class="fas fa-plus"></span></button>
       </form>
       <ul class="todo-list">
